Added Behaviors and Npc goals.